--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,8 @@ h5,
 h6 {
   font-weight: 400;
   margin-top: 0;
-  font-family: "Playfair Display", serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
 }
 
 h1 {
@@ -7613,7 +7614,7 @@ textarea:-ms-input-placeholder {
 .product_d_right h1 {
   color: #242424;
   text-transform: capitalize;
-  line-height: 21px;
+  line-height: 30px;
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 20px;
